# kalender-hijriyah

./: .dockerignore  .env.example  .gitattributes  .gitignore  .vercelignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  netlify.toml  package.json  pnpm-lock.yaml  tailwind.config.js  test_alt.go  vercel.json
apps/backend/: .env.example  app.py  astro_utils.py  conjunction.py  ephemeris.py  hijriCalculator.js  hijri_calculator.py  julian.py  month_predictor.py  package.json  pyproject.toml  requirements.txt  server.js  sun_times.py  visibility.py
apps/backend/app/: main.py
apps/backend/app/api/: hijri.py  moon.py  rukyat.py
apps/backend/app/core/: astro_accestors.py  astro_utils.py  astronomy_engine.py  config.py  conjunction.py  disk_cache.py  global_grid.py  hijri_calculator.py  hijri_explain.py  julian.py  logging_config.py  method_factory.py  month_predictor.py  redis_cache.py  rukyat_epoch.py  sun_times.py  visibility.py  visibility_registry.py
apps/backend/app/core/astronomy/: __init__.py  conjunction.py  criteria_registry.py  global_grid.py  sun_times.py  (+3 more)
apps/backend/app/schemas/: __init__.py  hijri.py  moon.py  rukyat.py
apps/backend/data/: de421.bsp:Zone.Identifier
apps/backend/scripts/: smoke_test.py
apps/backend/static/: index.html
apps/backend/static/assets/: index-BF4xfzBk.css  index-D4KobQoz.js
apps/backend/test/: conftest.py  test_conjunction.py  test_hijri_calculator.py  test_hijri_explain.py  test_julian.py  test_maghrib_boundary.py  test_month_predictor.py  test_sun_times.py  test_visibility.py
(+240 files in other folders)
